# OpenPCB

./: .dockerignore  .env.e2e.example  .env.example  .gitignore  3D_PLAN.md  AGENTS.md  AI_SERVICE_EXPLORATION_INDEX.md  AI_SERVICE_EXPLORATION_SUMMARY.md  AI_SERVICE_INVENTORY.md  AI_SERVICE_QUICK_REFERENCE.md  AI_V1_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  ASSISTANT_FINDINGS_HANDOFF.md  ASSISTANT_MODULE_TEST_REPORT.md  BACKEND_BREAKAGES_ANALYSIS.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPONENT_LIBRARY_MIGRATION.md  CONTRIBUTING.md  CURRENT_STATE.md  CURRENT_STATE_REPORT.md  Cargo.toml  Claude_Brainstorming.md  Dockerfile  FIX_PLAN.md  Flux_ai_analysis.md  IMPORT_BREAKAGES.md  LICENSE  MIGRATION_FILE_INVENTORY.md  MIGRATION_PLAN_REVIEW.md  MIGRATION_REVIEW_INDEX.md  MIGRATION_REVIEW_SUMMARY.txt  PCB_Design_Suite_Specification_v1.0.md  PHASE2_EXPLORATION.md  PHASE3_EXPLORATION.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PROPOSED_ARCHITECTURE.md  (+34 more)
.github/: RELEASE_DRY_RUN.md  RELEASE_TEMPLATE.md  pull_request_template.md
.playwright-cli/: page-2026-04-02T06-23-04-521Z.yml  page-2026-04-02T06-23-28-385Z.yml  page-2026-04-02T06-23-40-350Z.yml  page-2026-04-02T10-25-02-358Z.yml  page-2026-04-02T10-25-10-942Z.yml  page-2026-04-02T10-25-22-557Z.yml  page-2026-04-03T03-03-35-409Z.yml  page-2026-04-03T03-03-55-556Z.yml  page-2026-04-03T03-11-08-746Z.yml  page-2026-04-03T10-50-27-029Z.yml  (+5 more)
src-tauri/crates/bridge/: Cargo.toml
src-tauri/crates/bridge-introspect/: Cargo.toml
src-tauri/crates/bridge-introspect/src/: main.rs
src-tauri/crates/bridge/src/: lib.rs
(+2200 files in other folders)
