[package]
name = "bridge-introspect"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge-introspect"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inventory = "0.3"
one_mind_bridge = { path = "../bridge" }
# Import all modules that should be included in the manifest
OpenPCB = { path = "../../", package = "OpenPCB" }

