[package]
name = "openpcb_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tauri = { version = "2.0", features = ["test"] }
thiserror = "1"
log = "0.4"
strsim = "0.11"
inventory = "0.3"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4"] }
